refactor: Command messages